perf: Add Search in DataUnit Selector
